// Code generated by chocoproto. DO NOT EDIT.
syntax = "proto3";

package example.proto.example;

import "google/api/annotations.proto";

import "google/protobuf/timestamp.proto";

import "openapiv3/annotations.proto";

import "proto/example/ent.proto";

import "syralon/entproto/field.proto";

import "syralon/entproto/paginator.proto";

option go_package = "github.com/syralon/entc-gen-go/example/proto/example;example";

message GroupOptions {
  syralon.entproto.Int64Field id = 1;

  optional syralon.entproto.StringField name = 2;

  optional syralon.entproto.TimestampField created_at = 3;

  optional syralon.entproto.TimestampField updated_at = 4;

  UserOptions group_users = 5;
}

message UserOptions {
  syralon.entproto.Int64Field id = 1;

  // The user name
  optional syralon.entproto.StringField name = 2 [
    (openapi.v3.property) = { description: "The name" }
  ];

  // The created time
  optional syralon.entproto.TimestampField created_at = 3;

  // The latest update time
  optional syralon.entproto.TimestampField updated_at = 4;

  optional syralon.entproto.Int64Field group_id = 5;

  optional syralon.entproto.Int32Field status = 6;

  GroupOptions user_groups = 7;
}

message GroupUpdateOptions {
  syralon.entproto.Int64Field id = 1;

  optional syralon.entproto.StringField name = 2;

  UserUpdateOptions group_users = 3;
}

message UserUpdateOptions {
  syralon.entproto.Int64Field id = 1;

  // The user name
  optional syralon.entproto.StringField name = 2 [
    (openapi.v3.property) = { description: "The name" }
  ];

  optional syralon.entproto.Int64Field group_id = 3;

  optional syralon.entproto.Int32Field status = 4;

  GroupUpdateOptions user_groups = 5;
}

message GetGroupRequest {
  int64 id = 1;
}

message GetGroupResponse {
  Group data = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  User data = 1;
}

message ListGroupRequest {
  GroupOptions options = 1;

  syralon.entproto.Paginator paginator = 2;
}

message ListGroupResponse {
  repeated Group data = 1;
}

message ListUserRequest {
  UserOptions options = 1;

  syralon.entproto.Paginator paginator = 2;
}

message ListUserResponse {
  repeated User data = 1;
}

message CreateGroupRequest {
  int64 id = 1;

  string name = 2;

  google.protobuf.Timestamp created_at = 3;

  google.protobuf.Timestamp updated_at = 4;

  repeated User group_users = 5;
}

message CreateGroupResponse {
  int64 id = 1;
}

message CreateUserRequest {
  int64 id = 1;

  // The user name
  string name = 2 [
    (openapi.v3.property) = { description: "The name" }
  ];

  // The created time
  google.protobuf.Timestamp created_at = 3;

  // The latest update time
  google.protobuf.Timestamp updated_at = 4;

  int64 group_id = 5;

  int32 status = 6;

  repeated Group user_groups = 7;
}

message CreateUserResponse {
  int64 id = 1;
}

message UpdateGroupRequest {
  int64 id = 1;

  GroupUpdateOptions options = 2;
}

message UpdateGroupResponse {
}

message UpdateUserRequest {
  int64 id = 1;

  UserUpdateOptions options = 2;
}

message UpdateUserResponse {
}

message DeleteGroupRequest {
  int64 id = 1;
}

message DeleteGroupResponse {
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {
}

message SetUserStatusRequest {
  int64 user_id = 1;

  UserOptions options = 2;

  int32 set = 3;
}

message SetUserStatusResponse {
  int32 rows = 1;
}

message ListGroupGroupUsersRequest {
  int64 group_id = 1;

  UserOptions options = 2;

  syralon.entproto.Paginator paginator = 3;
}

message ListUserUserGroupsRequest {
  int64 user_id = 1;

  GroupOptions options = 2;

  syralon.entproto.Paginator paginator = 3;
}

service GroupService {
  rpc ListGroupUsers ( ListGroupGroupUsersRequest ) returns ( ListUserResponse ) {
    option (google.api.http) = { get: "/v1/group/{group_id}/groupusers" };
  }

  rpc Get ( GetGroupRequest ) returns ( GetGroupResponse ) {
    option (google.api.http) = { get: "/v1/group/{id}" };
  }

  rpc List ( ListGroupRequest ) returns ( ListGroupResponse ) {
    option (google.api.http) = { get: "/v1/group" };
  }

  rpc Create ( CreateGroupRequest ) returns ( CreateGroupResponse ) {
    option (google.api.http) = { post: "/v1/group", body: "*" };
  }

  rpc Update ( UpdateGroupRequest ) returns ( UpdateGroupResponse ) {
    option (google.api.http) = { post: "/v1/group/{id}", body: "*" };
  }

  rpc Delete ( DeleteGroupRequest ) returns ( DeleteGroupResponse ) {
    option (google.api.http) = { delete: "/v1/group/{id}" };
  }
}

service UserService {
  rpc SetStatus ( SetUserStatusRequest ) returns ( SetUserStatusResponse ) {
    option (google.api.http) = { put: "/v1/user/{user_id}/status", body: "*" };
  }

  rpc ListUserGroups ( ListUserUserGroupsRequest ) returns ( ListGroupResponse ) {
    option (google.api.http) = { get: "/v1/user/{user_id}/usergroups" };
  }

  rpc Get ( GetUserRequest ) returns ( GetUserResponse ) {
    option (google.api.http) = { get: "/v1/user/{id}" };
  }

  rpc List ( ListUserRequest ) returns ( ListUserResponse ) {
    option (google.api.http) = { get: "/v1/user" };
  }

  rpc Create ( CreateUserRequest ) returns ( CreateUserResponse ) {
    option (google.api.http) = { post: "/v1/user", body: "*" };
  }

  rpc Update ( UpdateUserRequest ) returns ( UpdateUserResponse ) {
    option (google.api.http) = { post: "/v1/user/{id}", body: "*" };
  }

  rpc Delete ( DeleteUserRequest ) returns ( DeleteUserResponse ) {
    option (google.api.http) = { delete: "/v1/user/{id}" };
  }
}
